[bugfix] share buttons overflowing in actions view

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -371,10 +371,16 @@ md-toolbar.app-header:not(.md-menu-toolbar) {
 
 // Share buttons
 .share-button {
+	@media screen and (min-width: 200px) {
+		margin-left: 0px !important;
+		margin-right: 0px !important;
+	}
 	@media screen and (min-width: 320px) {
-		margin: 1px !important;
+		margin-left: 1px !important;
+		margin-right: 1px !important;
 	}
 	@media screen and (min-width: 425px) {
-		margin: 7px !important;
+		margin-left: 7px !important;
+		margin-right: 7px !important;
 	}
 }
